tests/lang/compile_fail/tuple_custom_protocol_bound.kojs
protocol Marked
  fn mark(self) -> Int
end

fn use_mark<T: Marked>(value: T) -> Int
  value.mark()
end

use_mark((1, 2))
